--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "underscore": ">=1.8.3"
   },
   "devDependencies": {
+    "typescript": "^3.0.3",
     "coffee-script": "1.7.1",
     "docco": "0.7.0",
     "eslint": "^2.11.0",
